k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3proxy
  namespace: s3proxy-e2e
  labels:
    app: s3proxy
  annotations:
    cloud.google.com/backend-config: '{"default":"s3proxy-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: s3proxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
