k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3proxy-internal
  namespace: s3proxy-e2e
  annotations:
    kubernetes.io/ingress.regional-static-ip-name: "s3proxy-regional-internal-reserved"
    kubernetes.io/ingress.class: gce-internal
    kubernetes.io/ingress.allow-http: "true"
    # Internal ALB address is auto-assigned for now.
    # If you later reserve a fixed regional internal static IP, add:
    # kubernetes.io/ingress.regional-static-ip-name: "<YOUR_STATIC_IP_NAME>"
spec:
  rules:
    - host: s3proxy.lb.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s3proxy
                port:
                  number: 8080
